--- a/Course/HTML and CSS/Space Station Website Drill/index.html
+++ b/Course/HTML and CSS/Space Station Website Drill/index.html
@@ -137,7 +137,7 @@
 							<img src="./images/thumb/thumbnail_9.png" alt="">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to Enlarge</h3>
-								<p>We have several space lanches< departing daily, book your flight today!</p>
+								<p>We have several space lanches departing daily, book your flight today!</p>
 							</div>
 						</div>
 					</div>
